--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@storybook/addon-a11y": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
     "@storybook/addon-storyshots": "^5.2.6",
     "@storybook/addon-storysource": "^5.2.6",
     "core-js": "^2.5.4",
